--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,9 @@
+/** {
+    border: 2px solid black;
+}*/
+
 #eight-ball {
+    position: relative;
     height: 400px;
     width: 400px;
     border-radius: 100%;
@@ -6,16 +11,23 @@
     margin: 0 auto;
 }
 
+#answer-window {
+    height: 400px;
+}
+
 #answer {
-    margin: 0 auto;
-    padding-top: 160px;
-    background-color: black;
-    width: 80px;
+    position: absolute;
+    top: 90px;
+    right: 110px;
+    background-color: #090447;
+    width: 100px;
     color: white;
-    height: 80px;
+    height: 100px;
     text-align: center;
-    z-index: 1;
+    line-height: 24px;
     border-radius: 100%;
+    border: 2px inset darkblue;
+    padding: 40px;
 }
 
 #shake {
