--- a/css/style.css
+++ b/css/style.css
@@ -12,7 +12,7 @@
 }
 
 #answer-window {
-    height: 400px;
+    /*height: 400px;*/
 }
 
 #answer {
@@ -21,8 +21,8 @@
     right: 110px;
     background-color: #090447;
     width: 100px;
-    color: white;
     height: 100px;
+    color: white;
     text-align: center;
     line-height: 24px;
     border-radius: 100%;
