--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,28 @@
+body {
+    background: seagreen;
+    /* For browsers that do not support gradients */
+    background: -webkit-linear-gradient(left top, seagreen, lightseagreen);
+    /* For Safari 5.1 to 6.0 */
+    background: -o-linear-gradient(bottom right, seagreen, lightseagreen);
+    /* For Opera 11.1 to 12.0 */
+    background: -moz-linear-gradient(bottom right, seagreen, lightseagreen);
+    /* For Firefox 3.6 to 15 */
+    background: linear-gradient(to bottom right, seagreen, lightseagreen);
+    /* Standard syntax (must be last) */
+    height: 700px;
+}
+
+h1 {
+    color: black;
+    text-align: center;
+    margin: 0 auto;
+    padding: 30px 10px;
+    font-size: 3em;
+    font-family: 'Permanent Marker', cursive;
+    letter-spacing: 10px;
+    text-shadow: 2px 2px;
+}
+
 #eight-ball {
     position: relative;
     height: 400px;
@@ -14,7 +39,7 @@
     background-color: #090447;
     width: 100px;
     height: 100px;
-    color: white;
+    color: #B3B6C4;
     text-align: center;
     line-height: 24px;
     border-radius: 100%;
